# reddit-toxicity

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs  oauth.rs  scoring.rs  svg.rs
server/: Cargo.toml
server/src/: about.rs  error.rs  fetcher.rs  main.rs  rasterize.rs  routes.rs  state.rs
