[workspace]
resolver = "2"
members = ["core", "server"]

[profile.compact]
inherits = "release"
opt-level = "z"     # optimize for size
lto = true          # link-time optimization — removes dead code across crates
codegen-units = 1   # single codegen unit — slower build, smaller binary
panic = "abort"     # no unwinding machinery
strip = true        # strip debug symbols and metadata
