[package]
name = "reddit-toxicity-core"
description = "Shared toxicity scoring and SVG rendering for Reddit Toxicity Badge"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
