[package]
name = "reddit-toxicity-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reddit-toxicity"
path = "src/main.rs"

[dependencies]
reddit-toxicity-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
moka = { version = "0.12", features = ["future"] }
tower = { version = "0.5", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
resvg = "0.44"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
